--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     
     </article>
     
-    <footer><p>Source: <a href="http://en.wikipedia.org/wiki/Sergei_Eisenstein">Wikipedia: Sergei Eisenstein</a></p>
+    <footer><p>Source: <a href="http://en.wikipedia.org/wiki/Sergei_Eisenstein">Wikipedia, Sergei Eisenstein</a></p>
     </footer>
 </body>
 </html>
