--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <p><strong>Sergei Eisenstein</strong> was a pioneering Soviet Russian film director and film theorist, often considered to be the Father of Montage. He is noted in particular for his silent films <em>Strike</em> (1924), <em>Battleship Potemkin</em> (1925) and <em>October</em> (1927), as well as the historical epics <em>Alexander Nevsky</em> (1938) and <em>Ivan the Terrible</em> (1944, 1958).</p>
         
         <figure>
-        <img src="images/sergeieisenstein.jpg" alt="Sergei Eisenstein">
+        <img src="images/eisensteinphoto.jpg" alt="Sergei Eisenstein">
         <figcaption>Picture of a young Eisenstein</figcaption>
         </figure>
         
